--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.github.ovso.pokemon">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="io.github.ovso.pokemon"
+    tools:ignore="LockedOrientationActivity">
 
     <application
+        android:name=".app.PokemonApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pokemon">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Pokemon"
+        tools:ignore="AllowBackup">
+        <activity
+            android:name=".view.ui.splash.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.ui.main.MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
